module1-task3 #comment Adds react and first component.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "six-cities",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
-    "eslint": "eslint --ext .jsx --ext .js src/",
+    "eslint": "eslint --ext .jsx --ext .js .",
     "test": "npm run eslint",
     "build": "webpack --mode production",
     "start": "webpack-dev-server"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --relative"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": ["npm test"]
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
@@ -17,11 +25,17 @@
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.16.0",
+    "husky": "3.0.9",
+    "lint-staged": "9.4.2",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.2"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "react": "16.10.2",
+    "react-dom": "16.10.2"
   }
 }
