--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,18 +1,10 @@
+root: true
+
 env:
   es6: true
-  browser: true
-  commonjs: true
+  node: true
 
-extends: ['htmlacademy/es6', 'plugin:react/recommended']
+extends: ['htmlacademy/node']
 
 parserOptions:
-  ecmaFeatures:
-    jsx: true
   ecmaVersion: 6
-  sourceType: module
-
-plugins: ['react']
-
-settings:
-  react:
-    version: '16'
