--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "six-cities",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
@@ -15,7 +15,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx}": ["npm test"]
+    "*.{js,jsx}": [
+      "npm test"
+    ]
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
@@ -35,6 +37,7 @@
     "node": "10"
   },
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2"
   }
