--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "six-cities",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
     "eslint": "eslint --ext .jsx --ext .js .",
-    "test": "npm run eslint",
+    "eslint:fix": "npm run eslint -- --fix",
+    "jest": "jest --verbose",
+    "jest:update": "npm run jest -- -u",
+    "test": "npm run eslint && npm run jest",
+    "test:fix": "npm run eslint:fix && num run jest:update",
     "build": "webpack --mode production",
     "start": "webpack-dev-server"
   },
@@ -23,12 +27,17 @@
     "@babel/core": "7.6.4",
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
+    "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.1",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.16.0",
     "husky": "3.0.9",
+    "jest": "24.9.0",
     "lint-staged": "9.4.2",
+    "react-test-renderer": "16.11.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.2"
