--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "six-cities",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
-    "eslint": "eslint --ext .jsx --ext .js .",
+    "eslint": "eslint --ext .js --ext .jsx .",
     "eslint:fix": "npm run eslint -- --fix",
     "jest": "jest --verbose",
     "jest:update": "npm run jest -- -u",
@@ -48,6 +48,7 @@
   "dependencies": {
     "prop-types": "15.7.2",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "react-router-dom": "5.1.2"
   }
 }
