--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "six-cities",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
@@ -29,15 +29,18 @@
     "@babel/preset-react": "7.6.3",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
+    "css-loader": "3.2.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.16.0",
+    "file-loader": "4.2.0",
     "husky": "3.0.9",
     "jest": "24.9.0",
     "lint-staged": "9.4.2",
     "react-test-renderer": "16.11.0",
+    "style-loader": "1.0.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.2"
@@ -46,9 +49,15 @@
     "node": "10"
   },
   "dependencies": {
+    "leaflet": "1.5.1",
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "react-router-dom": "5.1.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.css$": "<rootDir>/src/__mocks__/style-mock.js"
+    }
   }
 }
