--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "six-cities",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
@@ -43,6 +43,7 @@
     "jest": "24.9.0",
     "lint-staged": "9.4.2",
     "react-test-renderer": "16.11.0",
+    "redux-mock-store": "1.5.3",
     "style-loader": "1.0.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
@@ -58,7 +59,9 @@
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2",
-    "react-router-dom": "5.1.2"
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.4"
   },
   "jest": {
     "moduleNameMapper": {
