--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "six-cities",
-  "version": "1.10.0",
+  "version": "1.12.0",
   "private": true,
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
@@ -30,6 +30,7 @@
     "@babel/core": "7.6.4",
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
+    "axios-mock-adapter": "1.17.0",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
@@ -53,6 +54,7 @@
     "node": "10"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "classnames": "2.2.6",
     "haversine": "1.1.1",
     "leaflet": "1.5.1",
@@ -61,7 +63,10 @@
     "react-dom": "16.10.2",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
-    "redux": "4.0.4"
+    "recompose": "0.30.0",
+    "redux": "4.0.4",
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   },
   "jest": {
     "moduleNameMapper": {
