Change root directory to src

--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "reselect": "4.0.0"
   },
   "jest": {
+    "moduleFileExtensions": ["js", "jsx"],
+    "moduleDirectories": ["src", "node_modules"],
     "moduleNameMapper": {
       "\\.css$": "<rootDir>/src/__mocks__/style-mock.js"
     }
