move all main-page specific children components to main-page directory, and common components to @ui

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
       "node_modules"
     ],
     "moduleNameMapper": {
-      "\\.css$": "<rootDir>/src/__mocks__/style-mock.js"
+      "\\.css$": "<rootDir>/src/__mocks__/style-mock.js",
+      "@ui/(.*)$":"<rootDir>/src/components/ui/$1"
     }
   }
 }
