--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
+    "@babel/plugin-proposal-export-namespace-from": "7.8.3",
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "axios-mock-adapter": "1.18.1",
+    "babel-eslint": "10.1.0",
     "babel-jest": "26.0.1",
     "babel-loader": "8.1.0",
     "css-loader": "3.5.3",
