--- a/src/.eslintrc.yml
+++ b/src/.eslintrc.yml
@@ -1,20 +1,23 @@
 root: true
 
 env:
-  es6: true
+  es2020: true
   browser: true
-  commonjs: true
   jest: true
 
-extends: ['htmlacademy/es6', 'plugin:react/recommended']
+parser: babel-eslint
 
 parserOptions:
+  sourceType: module
   ecmaFeatures:
     jsx: true
-  ecmaVersion: 2018
-  sourceType: module
 
-plugins: ['react']
+plugins:
+ - react
+
+extends:
+ - htmlacademy/es6
+ - plugin:react/recommended
 
 settings:
   react:
